--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "NODE_ENV=production node app",
+    "start": "node app.js",
     "dev": "nodemon app"
   },
   "author": "Michael Parkadze",
